k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  backend:
    serviceName: kibana-6cdb88df97-rc8qm 
    servicePort: 5601
